[gd_scene load_steps=3 format=3 uid="uid://0j6h00qv1oe8"]

[ext_resource type="Theme" uid="uid://dkqrfy3kvl768" path="res://Menus/menu_theme.tres" id="1_mpdn4"]
[ext_resource type="Script" path="res://Menus/options_menu.gd" id="1_ufuy2"]

[node name="OptionsMenu" type="CanvasLayer"]
script = ExtResource("1_ufuy2")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mpdn4")
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 4
size_flags_stretch_ratio = 1.0
auto_translate = true
localize_numeral_system = true
tooltip_text = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 1
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
alignment = 0
script = null

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Visuals" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1
size_flags_stretch_ratio = 1.0
auto_translate = true
localize_numeral_system = true
tooltip_text = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 1
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
alignment = 1
script = null

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Visuals"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Display"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Fullscreen" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Visuals"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Visuals/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderSmall"
text = "Fullscreen"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/Visuals/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
alignment = 1
item_count = 2
selected = 1
popup/item_0/text = "On"
popup/item_0/id = 0
popup/item_1/text = "Off"
popup/item_1/id = 1

[node name="VSync" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Visuals"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Visuals/VSync"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderSmall"
text = "VSync"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/Visuals/VSync"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
alignment = 1
item_count = 2
selected = 0
popup/item_0/text = "On"
popup/item_0/id = 0
popup/item_1/text = "Off"
popup/item_1/id = 1

[node name="Resolution" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Visuals"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Visuals/Resolution"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderSmall"
text = "Windowed Resolution"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/Visuals/Resolution"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
alignment = 1
icon_alignment = 1
item_count = 3
selected = 1
popup/item_0/text = "800x600"
popup/item_0/id = 0
popup/item_1/text = "1280x720"
popup/item_1/id = 1
popup/item_2/text = "1920x1080"
popup/item_2/id = 2

[node name="Audio" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1
size_flags_stretch_ratio = 1.0
auto_translate = true
localize_numeral_system = true
tooltip_text = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 1
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
alignment = 0
script = null

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Audio"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Audio"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Master" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Audio"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Audio/Master"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderSmall"
text = "Master Volume"

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/Audio/Master"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.5
value = 50.0

[node name="Music" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Audio"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Audio/Music"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderSmall"
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/Audio/Music"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.5
value = 50.0

[node name="SFX" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Audio"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Audio/SFX"]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderSmall"
text = "Sound Effects Volume"

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer/Audio/SFX"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.5
value = 50.0

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(512, 64)
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/Visuals/Fullscreen/OptionButton" to="." method="_on_screen_toggle_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Visuals/VSync/OptionButton" to="." method="_on_vs_toggle_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Visuals/Resolution/OptionButton" to="." method="_on_resolution_selected"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Audio/Master/HSlider" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Audio/Music/HSlider" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Audio/SFX/HSlider" to="." method="_on_sfx_value_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
